# chirm

./: Cargo.toml  LICENSE  README.md  ws-minimal-test.html
.github/workflows/: ci.yml
chirm_encoding/: Cargo.toml
chirm_encoding/benches/: benchmark.rs
chirm_encoding/src/: constants.rs  decoder.rs  encoder.rs  lib.rs
chirm_server/: Cargo.toml  webrtc-signaling-client.html
chirm_server/docs/: sdp-ice.md
chirm_server/src/: client_manager.rs  main.rs  messaging.rs
examples/: ootb_webrtc_flow.rs
src/: main.rs
