[workspace]
resolver = "3"
members = ["chirm_encoding", "chirm_server"]

[package]
name = "chirm"
version = "0.1.0"
authors = ["Andreas Nilsson <nilsiker94@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
cpal = "0.15.3"
libp2p = { version = "0.55.0", features = ["tcp", "tokio"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
webrtc = "0.13.0"

[dev-dependencies]
chirm_encoding = { path = "chirm_encoding" }
