[package]
name = "chirm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing = "0.1.41"
